--- a/About.html
+++ b/About.html
@@ -6,6 +6,8 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+    <button class="toggle-btn" id="theme-toggle">🌞 Toggle Mode 🌙</button>
+    <script src="script.js"></script>
     <nav class="navbar">
         <a href="index.html">Home</a> 
         <a href="About.html">About</a>
@@ -13,6 +15,7 @@
         <a href="Portfolio.html">Portfolio</a>
         <a href="Contact.html">Contact</a>
     </nav>
+    <script src="script.js"></script>
 </body>
 </html>
  
