--- a/About.html
+++ b/About.html
@@ -15,6 +15,17 @@
         <a href="Portfolio.html">Portfolio</a>
         <a href="Contact.html">Contact</a>
     </nav>
+    <p class="paragraph">This is a paragraph that should appear below the navbar.</p>
+    <div class="clear">
+        <span class="studio">Path of Light Yoga Studio</span><br />
+        612 Serenity Way<br />
+        El Dorado, CA 96162<br /><br />
+        888-555-5555<br /><br />
+    </div>
+    <footer>
+        <span class="studio"> &#xA9; 2025 Little Ummah</span><br />
+        <a href="mailto:campingmusafir@gmail.com">campingmusafir@gmail.com</a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
