--- a/About.html
+++ b/About.html
@@ -17,13 +17,13 @@
     </nav>
     <p class="paragraph">This is a paragraph that should appear below the navbar.</p>
     <div class="clear">
-        <span class="studio">Path of Light Yoga Studio</span><br />
-        612 Serenity Way<br />
+        <span class="studio">Little Ummah</span><br />
+        612 Key drive<br />
         El Dorado, CA 96162<br /><br />
         888-555-5555<br /><br />
     </div>
     <footer>
-        <span class="studio"> &#xA9; 2025 Little Ummah</span><br />
+        <span class="studio"> &#xA9; 2025 aziziyah.net</span><br />
         <a href="mailto:campingmusafir@gmail.com">campingmusafir@gmail.com</a>
     </footer>
     <script src="script.js"></script>
