--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <a href="Portfolio.html">Portfolio</a>
         <a href="Contact.html">Contact</a>
     </nav>
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/me.png" />
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About US</h1>
+                    <p>gghjgj ghjghjgj gjhgjhgjgj ghjgjgjgj ghjgjgj</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
