--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
     <div class="clear">
         <span class="studio">Little Ummah</span><br />
         612 Key drive<br />
-        El Dorado, CA 96162<br /><br />
+        IL Dorado, CA 90002<br /><br />
         888-555-5555<br /><br />
     </div>
     <footer>
