--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="images/me.png" />
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">About US</h1>
-                    <p>gghjgj ghjghjgj gjhgjhgjgj ghjgjgjgj ghjgjgj</p>
+                    <h1 class="sub-title">About US</h1><br>
+                    <p>Under Development</p>
                 </div>
             </div>
         </div>
