--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-    <title>Little Ummah</title>
+    <title>Little Angels</title>
     <meta charset="UTF-8" />
     <link href="style.css" rel="stylesheet" />
 </head>
