--- a/About.html
+++ b/About.html
@@ -17,14 +17,14 @@
     </nav>
     <p class="paragraph">This is a paragraph that should appear below the navbar.</p>
     <div class="clear">
-        <span class="studio">Little Ummah</span><br />
+        <span class="studio">Little Angels</span><br />
         612 Key drive<br />
         IL Dorado, CA 90002<br /><br />
         888-555-5555<br /><br />
     </div>
     <footer>
         <span class="studio"> &#xA9; 2025 aziziyah.net</span><br />
-        <a href="mailto:campingmusafir@gmail.com">campingmusafir@gmail.com</a>
+        <a href="mailto:abc@gmail.com">abc@gmail.com</a>
     </footer>
     <script src="script.js"></script>
 </body>
