--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         <a href="index.html">Home</a> 
         <a href="About.html">About</a>
         <a href="Services.html">Services</a> 
-        <a href="Portfolio.html">Portfolio</a>
+        <a href="Pricing.html">Pricing</a>
         <a href="Contact.html">Contact</a>
     </nav>
     <p class="paragraph">This is a paragraph that should appear below the navbar.</p>
