--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
         <a href="index.html">Home</a> 
         <a href="About.html">About</a>
         <a href="Services.html">Services</a> 
-        <a href="Portfolio.html">Portfolio</a>
+        <a href="Pricing.html">Pricing</a>
         <a href="Contact.html">Contact</a>
     </nav>
     <script src="script.js"></script>
