--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
         <a href="Pricing.html">Pricing</a>
         <a href="Contact.html">Contact</a>
     </nav>
-    <p class="paragraph">This is a paragraph that should appear below the navbar.</p>
+    <p class="paragraph">Your content will be showcased here in a clean, dynamic layout designed to make your project shine.</p>
     <div class="clear">
         <span class="studio">Little Angels</span><br />
         612 Key drive<br />
