--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="images/me.png" />
                 </div>
                 <div class="about-col-2">
-                    <h1 class="sub-title">About US</h1><br>
-                    <p>Under Development</p>
+                    <h1 class="sub-title">We are</h1><br>
+                    <p>transforming ideas into responsive, custom-coded solutions—let’s build your digital vision together! Get in touch today.</p>
                 </div>
             </div>
         </div>
